--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@popperjs/core": "^2.9.2"
+        "@popperjs/core": "^2.9.2",
+        "uikit": "^3.6.22"
     }
 }
